# RailSense-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 91711aab5efb_initial_schema.py  a3f8c21d4e19_add_lta_crowd_facilities_tables.py
designs/: 01-live-overview.html  02-sensor-explorer.html  03-alert-feed.html  04-model-comparison.html  shared-styles.css
docs/: DEPLOYMENT-RAILWAY.md
docs/plans/: 2026-03-14-railsense-ai-design.md  2026-03-14-railsense-ai-implementation.md  2026-04-11-lta-api-integration.md  2026-04-16-near-realtime-ingestion.md
scripts/: demo_seed.py  seed_data.py  start.sh
src/: config.py  scheduler.py  tasks.py
src/agent/: claude_provider.py  deepseek_provider.py  ollama_provider.py  openai_provider.py  prompts.py  provider.py
src/api/: main.py  schemas.py
src/dashboard/: app.py  queries.py  routes.py
src/db/: models.py  session.py
src/detection/: base.py  compare.py  ensemble.py  isolation_forest.py  pipeline.py  prophet_detector.py  stl_detector.py  zscore.py
src/ingestion/: lta_client.py  synthetic_gen.py  writers.py
src/templates/: alert_feed.html  base.html  lta_operations.html  model_comparison.html  overview.html  (+1 more)
tests/: conftest.py  test_agent.py  test_api.py  test_compare.py  test_db.py  test_ensemble.py  test_isolation_forest.py  test_lta_client.py  test_pipeline.py  test_prophet_detector.py  test_providers.py  test_scheduler.py  test_stl_detector.py  test_synthetic_gen.py  test_writers.py  test_zscore.py
