[project]
name = "railsense-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "httpx>=0.28",
    "scikit-learn>=1.6",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "streamlit>=1.41",
    "pandas>=2.2",
    "numpy>=2.0",
    "prefect>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.43",
    "openai>=1.60",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
